<resources>
    <string name="app_name">Authors</string>
    <string name="phone_number">phone number</string>
    <string name="password">password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name1">name1</string>
    <string name="first_name">first name</string>
    <string name="login">login</string>
    <string name="required">required</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone">phone</string>
    <string name="logi_n">login</string>
    <string name="log_in">login</string>
    <string name="login_into_authors_app">login into Authors app</string>
    <string name="phone_number_amp_password_to_continue"><![CDATA[Phone Number & password to continue]]></string>
    <string name="logn">login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="SIGNUP">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="gender">Gender</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Sign up</string>
    <string name="back">back</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
</resources>