<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/signupFragment"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="544dp"
        tools:context=".SignupFragment"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#29c17e"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="3.4sp"
            android:gravity="end"
            android:text="Sign up"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textSize="24sp"
            android:textColor="#272a3f"
            android:lineSpacingExtra="8sp"
            android:text="Welcome to Authors App"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textSize="20sp"
            android:textColor="#6e7989"
            android:lineSpacingExtra="8sp"
            android:text="Let&apos;s get started"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cont_frstname"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="130dp"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="8sp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fname"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="268dp"
                android:layout_height="48dp"
                android:textColor="#99a0b0"
                android:textSize="16sp"
                android:textStyle="normal"
                android:hint="First Name" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cont_lastname"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="8sp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lname"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="268dp"
                android:layout_height="48dp"
                android:textColor="#99a0b0"
                android:textSize="16sp"
                android:textStyle="normal"
                android:hint="Last Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/cont_pnumber"
            android:layout_width="364dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="230dp"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="8sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phnum"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="#99a0b0"
                android:textSize="16sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_pass"
            android:layout_width="395dp"
            android:layout_height="48dp"
            android:layout_marginTop="280dp"
            tools:counterEnabled="true"
            tools:counterMaxLength="16"
            tools:helperText="@string/required"
            tools:helperTextTextColor="#FFD17171"
            tools:ignore="ExtraText"
            tools:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passcode"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColorHint="#757575"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#99a0b0"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="8sp"
            android:text="Gender"/>

<RadioGroup
    android:id="@+id/R_gender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/male"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="390dp"
        android:background="#FFFF"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="3.4sp"
        android:minHeight="48dp"
        android:text=" male "
        android:textAlignment="center"
        android:textColor="#EB0A0A0B"
        android:textSize="17sp"
        android:textStyle="normal" />

    <RadioButton
        android:id="@+id/fe_male"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="390dp"
        android:background="#E6618F"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="3.4sp"
        android:minHeight="48dp"
        android:text="female"
        android:textAlignment="center"
        android:textColor="#3C0E0E"
        android:textSize="17sp"
        android:textStyle="normal" />


</RadioGroup>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/sinup"
            android:layout_width="127dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="459dp"
            android:background="@color/blue"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="3.4sp"
            android:text="Sign up"
            android:textAlignment="center"
            android:textColor="#3C0E0E"
            android:textSize="17sp"
            android:textStyle="normal"

            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logn"
            android:layout_width="127dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="459dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/login"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="3.4sp"
            android:text="@string/logn"
            android:textAlignment="center"
            android:textColor="#3C0E0E"
            android:textSize="17sp"
            android:textStyle="normal" />


    </FrameLayout>

</LinearLayout>